bonus/confs/gitlab/gitlab-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gitlab-headers
  namespace: gitlab
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Ssl: "on"

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-webservice-ingress
  namespace: gitlab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: gitlab-gitlab-headers@kubernetescrd
spec:
  rules:
  - host: gitlab.cadet.in.th
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-webservice-default
            port:
              number: 8181
