bonus/confs/gitlab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgweb-ingress
  namespace: gitlab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: gitlab-pgweb.cadet.in.th
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgweb-service
                port:
                  number: 80

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console-ingressroute
  namespace: gitlab
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio-console.cadet.in.th`)
      kind: Rule
      services:
        - name: primary-object-store-console
          port: 9443
          scheme: https
          serversTransport: minio-insecure-transport
  tls:
    secretName: gitlab-tls
