bonus/confs/gitlab/minio-ingress.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console-ingressroute
  namespace: gitlab
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio-console.cadet.in.th`)
      kind: Rule
      services:
        - name: primary-object-store-console
          port: 9443
          scheme: https
          serversTransport: minio-insecure-transport
